Bug 169675 - PPTX FILESAVE Animations on 3D objects result in invalid PPTX
Summary: PPTX FILESAVE Animations on 3D objects result in invalid PPTX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks: PPTX-Corrupted PPTX-Animations
  Show dependency treegraph
 
Reported: 2025-11-25 04:12 UTC by Aron Budea
Modified: 2025-11-26 14:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample ODP (18.51 KB, application/vnd.oasis.opendocument.presentation)
2025-11-25 04:12 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-11-25 04:12:45 UTC
Created attachment 204268 [details]
Sample ODP

The attached ODP presentation has:
- a 3D object,
- a regular shape,
- a grouped shape containing a 3D object and a regular shape,
...with animations defined on each.

Save it as PPTX.
When opening the result in Impress, you will see the 3D objects are gone, this is expected, as they are specific to Impress.
Opening the result in PowerPoint fails.

The 3D objects aren't exported, but the animations on them are, causing invalid shape reference to be written into the PPTX.

If a grouped shape only consists of 3D objects, an empty group shape is exported, which is still OK, the problem is only animations on individual objects.

Observed using LO 26.2.0.0.alpha1+ (2025-11-22), 4.0.0.3 / Windows.
Comment 1 Commit Notification 2025-11-26 12:32:00 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2f32f2a9a84ff0d66b5dd608fb20fdeb7b7f99a3

tdf#169675 sd: animation on 3D object results in invalid PPTX

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-11-26 14:35:21 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/8af6771f8ec56185e15762ad1aac11177e8e3404

tdf#169675 sd: animation on 3D object results in invalid PPTX

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.