tdf#169675 sd: animation on 3D object results in invalid PPTX

3D objects are only supported in ODP, and don't get exported
to PPTX. Animations on them did get exported, resulting in
invalid 'spid' (-1) and invalid OOXML.

Reuse ShapeExport::IsShapeTypeKnown(...) introduced in
ab45b8d9959f8f392a10d0874c50f26b816a4da8.
Note the extra entries in
PowerPointShapeExport::WriteUnknownShape(...), these are
already covered by the second half of isValidTarget(...).

Change-Id: Ieb1dc1475b036fe4f24d84cee17b9af544c5bb18
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194543
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Code-Style: Aron Budea <aron.budea@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 2f32f2a9a84ff0d66b5dd608fb20fdeb7b7f99a3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194638
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Code-Style: Xisco Fauli <xiscofauli@libreoffice.org>